compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_else_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_choice_bad_else_action_type.fpp:7.39
    choice C { if g enter T else do { a } enter T }
                                      ^
error: type mismatch at choice
type of choice is None
type of action is U32
